working integration test! thank you NQ!

--- a/test/dummy/app/views/posts/index.html.erb
+++ b/test/dummy/app/views/posts/index.html.erb
@@ -1,3 +1,7 @@
+<a href="#bottom">scroll to bottom</a>
+
 <section data-behavior="infinite_page">
   <%= render @posts %>
 </section>
+
+<a name="bottom"></a>
